# ArUco-MarkerMapper

./: .gitignore  CMakeLists.txt  ChangeLog  MarkerMapper.sln  README  README.md  TODO  config.cmake.in  process halo marker map images.bat
MapperFromImages/: MapperFromImages.cpp  MapperFromImages.vcxproj  MapperFromImages.vcxproj.filters
MarkerMapper/: MarkerMapper.vcxproj  MarkerMapper.vcxproj.filters
sfm_utils/: CMakeLists.txt  bundler_step1_exportmatches.cpp  openmvg_step1_exportmatches.cpp  openmvg_step2_generate_pcd.cpp  vsfm_step1_exportmatches.cpp  vsfm_step2_generate_ply_log.cpp
src/: CMakeLists.txt  debug.cpp  debug.h  mapper_types.cpp  mapper_types.h  marker_mapper_exports.h  markermapper.cpp  markermapper.h  multicropdetect.cpp  multicropdetect.h
src/mappers/: globalgraph_markermapper.cpp  globalgraph_markermapper.h  graph.h  posegraphoptimizer.cpp  posegraphoptimizer.h  stgmatrix.h
src/optimizers/: fullsceneoptimizer.cpp  fullsceneoptimizer.h  ippe.cpp  sparselevmarq.h
src/utils/: kdtree.h  mm_omp.h  nanoflann.h  se3.h  utils3d.cpp  utils3d.h
tests/: CMakeLists.txt  README  addvideodata2mapper.cpp  compare2board.cpp  compare_logs.cpp  create_markers.cpp  extractpatch.cpp  graphsolver.cpp  leica2pcd.cpp  leica_error.cpp  leica_error_frommap.cpp  leicamarkers2pcd.cpp  log2pcd.cpp  markermapper2cvba.cpp  markermapper2map.cpp  markermapper2pcd.cpp  pcdsubsample.cpp  posegraphfromfile.cpp  ppv_process.cpp  ppv_tracking.cpp  preprocessvideo.cpp  preprocessvideo_fromimages.cpp  rpp_tests.cpp  test_ambig.cpp  test_errorfunction.cpp  test_keypoints.cpp  test_lagrangian.cpp  test_manu.cpp  test_met.cpp  test_msl_optimizer.cpp  test_optimization.cpp  test_utils3d.cpp  test_video.cpp  utils3d.cpp  utils3d.h
utils/: CMakeLists.txt  main.cpp  mapper_dummygame.cpp  mapper_from_images.cpp  mapper_from_video.cpp  mapper_live.cpp  mapper_viewer.cpp  sgl.h  sglviewer.h
